<resources>
	<string name="app_name">DF6371X</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="actually_calculated_electric_energy">实计电能[kW·h]</string>
    <string name="auto">自动</string>
    <string name="auto_validation">自动校验</string>
    <string name="auto_validation_results">自动校验结果</string>
    <string name="automatic">自动挡</string>
    <string name="automatic_validation_of_virtual_load_title">虚负荷自动校验 > %s</string>
    <string name="average_error">平均误差[%]</string>
    <string name="back_error_msg">当前正在校验，请停止后再返回！</string>
    <string name="back_to_list">返回列表</string>
    <string name="bar_code_address">条形码地址:</string>
    <string name="bar_code_scan">扫描条形码</string>
    <string name="barcode_scanner">条码扫描</string>
    <string name="baud_rate">波特率</string>
    <string name="blank_web_service_address">&lt;i>[打开WEB服务获取地址]&lt;/i></string>
    <string name="bluetooth_equipment_list">蓝牙设备列表</string>
    <string name="bluetooth_off">蓝牙关闭</string>
    <string name="bluetooth_on">已打开蓝牙</string>
    <string name="bluetooth_opening">正在打开蓝牙</string>
    <string name="broadcast_timing">广播校时</string>
    <string name="broadcast_timing_success">已发送校时命令！</string>
    <string name="calculate_md5_error">错误</string>
    <string name="calculate_the_false_actuation_time">计算潜动时间</string>
    <string name="select_i_type">电流采样方式</string>
    <string name="calculate_the_running_up_time">计算启动时间</string>
    <string name="calculate_the_running_up_time_tips">请先计算起动时间</string>
    <string name="calculating">计算中</string>
    <string name="calibrate">校时</string>
    <string name="calibrate_amplitude">校准幅值</string>
    <string name="calibrate_phase">校准相位</string>
    <string name="calibrate_projects">校验项目</string>
    <string name="calibrate_success_msg">成功校时！</string>
    <string name="calibrate_time">校准时间</string>
    <string name="calibration_mode">校准模式</string>
    <string name="cancel">取消</string>
    <string name="change_time_tips">如果本机时间有误，请到系统设置修改时间！</string>
    <string name="check">查看</string>
    <string name="check_gear_msg">请检查电表电流量程与设置量程是否一致，按[确认]启动标准源输出</string>
    <string name="choose_file_error">无法选择文件，请重试！</string>
    <string name="clamp_meter">钳表</string>
    <string name="clear_parameters">清空参数</string>
    <string name="click_and_choose">[点击选择]</string>
    <string name="click_and_new">[请点击新建方案]</string>
    <string name="clock_error">时钟误差[ppm]</string>
    <string name="clock_frequency">时钟频率</string>
    <string name="clock_frequency_unit">时钟频率[Hz]</string>
    <string name="close_web">关闭WEB</string>
    <string name="close_web_fail_msg">请先连上WIFI后再打开！</string>
    <string name="close_web_success_msg">已关闭WEB服务！</string>
    <string name="configuration_failure">设置失败</string>
    <string name="connect_error">连接出错</string>
    <string name="connected">已连接</string>
    <string name="connecting">正在连接蓝牙</string>
    <string name="constant_calibration">常数校验</string>
    <string name="constant_calibration_turns">常数校验: 圈数: %d</string>
    <string name="create">新建</string>
    <string name="create_scheme">新建方案</string>
    <string name="current">电流</string>
    <string name="current_protect_msg">电流回路异常保护！</string>
    <string name="current_range_limit">输入范围: 0~120%RG</string>
    <string name="current_source">电流源</string>
    <string name="current_source_label">电流源:</string>
    <string name="current_status">当前状态</string>
    <string name="current_status_label">当前状态: %s</string>
    <string name="current_time_of_equipment">设备当前时间:</string>
    <string name="current_value_limit">输入范围: 0~100A</string>
    <string name="daily_average_error">日平均误差</string>
    <string name="date">日期</string>
    <string name="datetime_blank">----年--月--日 --:--:--</string>
    <string name="datetime_placeholder">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="default_exception">与设备通讯失败，请尝试重新连接后再试！已断开蓝牙连接, 错误代码: %1$dH%2$s</string>
    <string name="delete">删除</string>
    <string name="delete_record_blank_msg">请至少选择一条记录</string>
    <string name="delete_record_msg">确定要删除校验记录？</string>
    <string name="delete_selected_record_msg">是否确定删除所选记录？</string>
    <string name="device_id">设备编号</string>
    <string name="device_time">设备时间:</string>
    <string name="disconnect">断开连接</string>
    <string name="duration_time_label">持续时间: %s</string>
    <string name="electric_energy_active_unit">电能单位: kW.h</string>
    <string name="electric_energy_error">电能误差[%]</string>
    <string name="electric_energy_meter_1">表1</string>
    <string name="electric_energy_meter_2">表2</string>
    <string name="electric_energy_meter_3">表3</string>
    <string name="electric_energy_meter_constant">电表常数</string>
    <string name="electric_energy_meter_clock_set">设置时钟</string>
    <string name="electric_energy_meter_xiebo_buchang">谐波补偿</string>
    <string name="electric_energy_meter_quxiao_buchang">取消补偿</string>
    <string name="electric_energy_meter_phase_number">电表相数</string>
    <string name="electric_energy_meter_specifications">电表规约</string>
    <string name="electric_energy_meter_test">电表校验</string>
    <string name="electric_energy_meter_type">电表类型</string>
    <string name="electric_energy_reactive_unit">电能单位: kvar.h</string>
    <string name="electromechanical_type">机电式</string>
    <string name="electronic_type">电子式</string>
    <string name="enter_meter_1_power">输入电表1电能:</string>
    <string name="enter_meter_2_power">输入电表2电能:</string>
    <string name="enter_meter_3_power">输入电表3电能:</string>
    <string name="enter_meter_address">输入电表地址</string>
    <string name="enter_meter_address_tips">请输入正确的表地址</string>
    <string name="enter_password">请输入密码:</string>
    <string name="enter_password_tips">请输入密码！</string>
    <string name="epitope_counts">表位数</string>
    <string name="equipment_information_input">设备信息导入</string>
    <string name="equipment_matching">设备配对</string>
    <string name="error">误差</string>
    <string name="error_mode">误差方式</string>
    <string name="error_title">错误</string>
    <string name="error_unit">误差[%]</string>
    <string name="even_validation">偶校验</string>
    <string name="event_log">事件记录</string>
    <string name="exit_calibration">退出校准</string>
    <string name="exit_upgrade">退出升级</string>
    <string name="export">导出</string>
    <string name="export_record_blank_msg">请至少选择一条记录</string>
    <string name="export_record_error_msg">无法导出Excel，</string>
    <string name="export_record_success_msg">成功导出</string>
    <string name="false_actuation_current">潜动电流</string>
    <string name="false_actuation_test_current_status">潜动试验: %1$s, %2$s, 潜动时间: %3$ds</string>
    <string name="false_actuation_test_current_status_result">潜动试验: %1$s, %2$s, 潜动时间: %3$ds, %4$s</string>
    <string name="false_actuation_test_remaining_status">潜动试验: %1$s, %2$s, 剩余时间: %3$ds</string>
    <string name="false_actuation_test_result">潜动结果</string>
    <string name="false_actuation_test_step_empty">潜动试验: 未开始</string>
    <string name="false_actuation_time">潜动时间</string>
    <string name="false_actuation_time_unit">潜动时间[min]</string>
    <string name="false_actuation_voltage">潜动电压</string>
    <string name="file_large_error">文件过大</string>
    <string name="file_list">文件列表</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="file_size">文件大小</string>
    <string name="file_small_error">文件过小</string>
    <string name="firmware_upgrade">固件升级</string>
    <string name="firmware_upgrade_title">系统设置 > 固件升级</string>
    <string name="firmware_version_blank">固件版本: ---</string>
    <string name="firmware_version_placeholder">固件版本: %s</string>
    <string name="frequency">频率</string>
    <string name="frequency_value_limit">输入范围: 45~65</string>
    <string name="fundamental_current">基本电流</string>
    <string name="fundamental_wave">基波</string>
    <string name="gear_position">档位:</string>
    <string name="gears_of_current">电流档位</string>
    <string name="gears_of_voltage">电压档位</string>
    <string name="harmonic">谐波</string>
    <string name="harmonic_closing">谐波关闭</string>
    <string name="humiture_blank">---℃</string>
    <string name="humiture_placeholder">%1$s℃ %2$sRH</string>
    <string name="import_btn">导入</string>
    <string name="import_fail_msg">导入失败，请使用模板文件。</string>
    <string name="import_information">信息导入</string>
    <string name="import_success_msg">成功导入方案</string>
    <string name="input_fail_msg">导入失败，请检查文件是否正确。</string>
    <string name="input_rate">输入倍率</string>
    <string name="input_too_big_msg">您的输入大于最大值，已默认取最大值</string>
    <string name="input_too_small_msg">您的输入小于最小值，已默认取最小值</string>
    <string name="input_value_limit">输入范围%1$s~%2$s的数据:</string>
    <string name="input_wrong_msg">您输入的数据有误！</string>
    <string name="inspection_results">校验结果</string>
    <string name="level_02">0.2级</string>
    <string name="level_05">0.5级</string>
    <string name="level_1">1.0级</string>
    <string name="level_100_calibration">100% 校准</string>
    <string name="level_2">2.0级</string>
    <string name="marketing_system">营销系统</string>
    <string name="parameter_validation">参数校准</string>
    <string name="model_switch">模式切换</string>
    <string name="scheme">方案</string>
    <string name="software_version_blank">软件版本: ---</string>
    <string name="stop_the_test">停止试验</string>
    <string name="switch_of_bluetooth">蓝牙开关</string>
    <string name="bluetooth_state_blank">---</string>
    <string name="acnl_scheme_default">无方案</string>
    <string name="manual_validation_of_virtual_load">虚负荷手动校验</string>
    <string name="manual_validation_of_real_load">实负荷手动校验</string>
    <string name="data_inquiry">数据查询</string>
    <string name="automatic_validation_of_virtual_load">虚负荷自动校验</string>
    <string name="electric_energy_meter_parameter">电表参数</string>
    <string name="system_setting">系统设置</string>
    <string name="search_equipment">扫描设备</string>
    <string name="intrinsic_error">基本误差</string>
    <string name="false_actuation_test">潜动试验</string>
    <string name="qidong_test">起动试验</string>
    <string name="walk_test">走字试验</string>
    <string name="clock_error_test">时钟误差</string>
    <string name="constant_check">常数校核</string>
    <string name="telemetry">遥测</string>
    <string name="harmonic_setup">谐波设置</string>
    <string name="harmonic_analysis">谐波分析</string>
    <string name="waveform_display">波形显示</string>
    <string name="dialog_confirm">确定</string>
    <string name="start_testing">开始试验</string>
    <string name="schedule">进度</string>
    <string name="txt_add_plan">增加方案</string>
    <string name="txt_edit_plan">编辑方案</string>
    <string name="txt_delete_plan">删除方案</string>
</resources>