<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout android:id="@+id/frame_system_main" android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="13.0" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="2.0">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/shebei_peidui" android:layout_width="@dimen/btn_width" android:layout_height="@dimen/btn_height" android:text="@string/equipment_matching" android:layout_weight="1.0" style="@style/MyButtonTheme" />
            <Button android:id="@id/yinxiao_xitong" android:layout_width="@dimen/btn_width" android:layout_height="@dimen/btn_height" android:text="@string/marketing_system" android:layout_weight="1.0" style="@style/MyButtonTheme" />
            <Button android:id="@id/gujian_shengji" android:layout_width="@dimen/btn_width" android:layout_height="@dimen/btn_height" android:text="@string/firmware_upgrade" android:layout_weight="1.0" style="@style/MyButtonTheme" />
            <Button android:id="@id/canshu_jiaozhun" android:layout_width="@dimen/btn_width" android:layout_height="@dimen/btn_height" android:text="@string/parameter_validation" android:layout_weight="1.0" style="@style/MyButtonTheme" />
            <Button android:id="@id/moshi_qiehuan" android:layout_width="@dimen/btn_width" android:layout_height="@dimen/btn_height" android:text="@string/model_switch" android:layout_weight="1.0" style="@style/MyButtonTheme" />
        </LinearLayout>
        <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <include android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0" layout="@layout/layout_bottom_status" />
    </LinearLayout>
</LinearLayout>