<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <com.wisdom.layout.TitleLayout
        android:id="@+id/title_acnl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" >
    </com.wisdom.layout.TitleLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="vertical" >
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center" 
                android:orientation="horizontal">
             <TextView 
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center" 
                android:text="@string/scheme"
                android:background="@drawable/cell_header_common_bg"
                android:textSize="@dimen/text_size"/>
             <TextView
                android:id="@+id/tv_scheme"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="5" 
                android:gravity="center"
                android:background="@drawable/cell_editable_bg"
                android:textSize="@dimen/text_size"
                android:text="@string/acnl_scheme_default"/>
                
            </LinearLayout>

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center" 
                android:orientation="horizontal">
             <TextView 
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center" 
                android:text="@string/schedule"
                android:background="@drawable/cell_header_common_bg"
                android:textSize="@dimen/text_size"/>
             
            <TextView
                  android:id="@+id/tv_jindu"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="5" 
                android:gravity="center"
                android:background="@drawable/cell_editable_bg"
                android:textSize="@dimen/text_size"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:layout_marginBottom="10dip" 
            android:orientation="horizontal">
            <LinearLayout 
                android:layout_height="wrap_content" 
                android:layout_width="0dip"
                 android:layout_gravity="bottom"
                android:layout_weight="1"
                ></LinearLayout>
            <Button 
                  android:id="@+id/bt_acnl_test"
                  android:layout_width="0dip"
                  android:layout_height="80px"
                  android:layout_gravity="bottom"
                  android:layout_weight="1"
                  android:text="@string/start_testing"
                  style="@style/MyButtonTheme"/>
             <Button 
                  android:id="@+id/bt_acnl_stop"
                  android:layout_width="0dip"
                  android:layout_height="80px"
                  android:layout_gravity="bottom"
                  android:layout_weight="1"
                  android:text="@string/stop_the_test"
                  style="@style/MyButtonTheme"/>
            <LinearLayout 
                android:layout_height="wrap_content" 
                android:layout_width="0dip"
                 android:layout_gravity="bottom"
                android:layout_weight="1"
                ></LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>